# Leona

./: .gitignore  README.md  folderWatcherPy2.py  project_setup.bash  project_setup_sketcher.bash  reqs.txt
Test-Setup and Archive/: drawing_setup_example.py  test_picture_painter.py  test_picture_taker.py  test_picture_taker_1.py
Test-Setup and Archive/Tracer/: Sketcher_Processing_Tests.ipynb  notes.md
Test-Setup and Archive/leonao_drawing_sand_box/: Face_paths_generator.py  Leonao_canvas.py  Leonao_painter.py  codingTrain_image.py  face_paths.pkl  face_paths_obama.pkl  potrace_rendering.py
Test-Setup and Archive/sketcher/: __init__.py  sketcher.py
Test-Setup and Archive/test_imgs/: michael_face_paths.pkl
Tracer/: Sketcher_Example copy.ipynb
face_detector/: face_detector.py  picture_taker.py
face_detector-packages/: __init__.py
leonao_drawing_sand_box/: Face_paths_generator.py  Fourier_epicycles.py  Leonao_canvas.py  Leonao_painter.py  face_paths_mayo.pkl  face_paths_obama_4.pkl  potrace_rendering.py  svg_parser.py
sketcher/: sketcher.py
sketcher/apdrawgan_adjusted/models/: test_model.py
src/leonao/: CMakeLists.txt  package.xml
src/leonao/config/: plane_config_new_approach.pkl  plane_config_v1.pkl  plane_config_v2.pkl  plane_config_v3.pkl  plane_config_v5_new.pkl
src/leonao/launch/: leonao.launch  setup_example.launch  test_camera.launch
src/leonao/libraries/: face_detector.py  face_paths_david_4.pkl  imageProcessing.py  local_painter.py  path_generator.py  picture_taker.py  requirements.txt  saveFacePosition.py  sketcher.py  test_saving.py
src/leonao/libraries/apdrawgan_adjusted/: __init__.py  apdrawgan.py  opt.py
src/leonao/libraries/apdrawgan_adjusted/checkpoints/formal_author/: opt.txt
src/leonao/libraries/apdrawgan_adjusted/models/: base_model.py  networks.py  test_model.py
src/leonao/scripts/: canvas.py  drawing_setup_example.py  drawing_setup_example_v1.py  inv_kinematic.py  main_controller.py  move_controller.py  move_service.py  picture_painter.py  picture_taker.py  test_picture_painter.py  test_picture_taker.py  test_picture_taker_2.py
src/leonao/src/: inv_kinematic.cpp  inv_kinematic_v2.cpp  inv_kinematic_v3.cpp
src/leonao/srv/: ConvertFromCameraBottomToTorso.srv  GetCartesianCoordinates.srv  MoveJoints.srv  Nao_RArm_chain_get_angles.srv  Nao_RArm_chain_get_transform.srv  RestEndEffector.srv  Stiffness.srv
src/leonao/watchfolder/: face_detection_result.txt  face_masks_00_sketch.pkl  face_paths.pkl  face_paths_david.pkl  face_paths_david_3.pkl  face_paths_monalisa.pkl  face_paths_nao.pkl  ingo_sketcher_result.pkl  result.txt  sergio_sketcher_result.pkl  sketcher_result.pkl  sketcher_result.txt  sketcher_result_3.pkl  sketcher_result_glasses.pkl  sketcher_result_sideGlasses.pkl  sketcher_result_topGlasses.pkl
watchfolder/: result.txt
